--- a/BrndBot/web/css/style_detail_overlay.css
+++ b/BrndBot/web/css/style_detail_overlay.css
@@ -71,7 +71,21 @@ a.svg:after {
     display: block;
     margin:0px;
 }
-
+/*.emailcontentmarkprog{
+    border: 0;
+    padding: 5px 0px 5px 5px;
+}*/
+.fixbotomremovebtn{
+    position: fixed;
+    margin-top: 10px !important;
+    margin-left: 6px !important;
+    margin-bottom: 10px !important;
+}
+.fixtobotom{
+    position: fixed;
+    bottom: 9%;
+    margin-left:50%;
+}
 .detail-content {
    width:100%;
     box-sizing: border-box;
